--- a/Kelly_Report.ipynb
+++ b/Kelly_Report.ipynb
@@ -505,7 +505,8 @@
         "## Appendix for codes \n",
         "\n",
         "* Codes for Buy and Hold Strategy :\n",
-        "https://colab.research.google.com/drive/17ad05NxrUvOuFNYFBP_PqidYRt26PSlk\n",
+        "report_bt_buy_and_hold.ipynb\n",
+       
         "\n",
         "* Codes for Normal Kelly Strategy :\n",
         "https://colab.research.google.com/drive/1VgnCsFMgErATp4qVyL-7sRwbPIPcRTDd\n",
