--- a/Kelly_Report.ipynb
+++ b/Kelly_Report.ipynb
@@ -509,22 +509,22 @@
        
         "\n",
         "* Codes for Normal Kelly Strategy :\n",
-        "https://colab.research.google.com/drive/1VgnCsFMgErATp4qVyL-7sRwbPIPcRTDd\n",
+        "report_bt_kelly_normal.ipynb\n",
         "\n",
         "* Codes for Custom Kelly with Linear Regression Prediction :\n",
-        "https://colab.research.google.com/drive/1lIxgjsA5Ev4YKuHKQbM5SrF-ygfyFZpQ\n",
+        "report_bt_kelly_custom_probability_lr.ipynb\n",
         "\n",
         "* Codes for Custom Kelly with LSTM Prediction :\n",
-        "https://colab.research.google.com/drive/1rsGH3jWXXm0Ka0sW7nS8ASLy6xmxjtiY\n",
+        "report_bt_kelly_custom_probability_lstm.ipynb\n",
         "\n",
         "* Codes for Discrete Setting Kelly with Linear Regression Prediction :\n",
-        "https://colab.research.google.com/drive/1NkGgdkkvtcbwJzkQXuTpAdPcL0EMNLnK\n",
+        "report_bt_kelly_discrete_lr.ipynb\n",
         "\n",
         "* Codes for Discrete Setting Kelly with LSTM Prediction :\n",
-        "https://colab.research.google.com/drive/1nxdW6nVroPJVAPqs9yaWpWionMeuE0EL\n",
+        "report_bt_kelly_discrete_lstm.ipynb\n",
         "\n",
         "* LSTM Prediction Price Generator:\n",
-        "https://colab.research.google.com/drive/16QqLvrAiGeT8PdFvEIMAWOrIi-2j-kOm\n"
+        "lstm_predicted_price_generator.ipynb\n"
       ]
     }
   ]
